kubernetes/apps/media/prowlarr/app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: media
spec:
  serviceName: prowlarr
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9794"
        prometheus.io/path: "/metrics"
    spec:
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: exportarr
          image: ghcr.io/onedr0p/exportarr:v2.0.0
          imagePullPolicy: IfNotPresent
          args: ["prowlarr"]
          ports:
            - containerPort: 9794
              name: metrics
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 9696
              name: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /run
          resources:
            requests:
              memory: 256Mi
              cpu: "100m"
            limits:
              memory: 256Mi
              cpu: "500m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: tmp
          emptyDir: {}
        - name: run
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.71.169
  ports:
    - port: 9696
      targetPort: 9696
      name: http
  selector:
    app: prowlarr
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prowlarr
  namespace: media
spec:
  hosts:
    - "prowlarr.bavsworld.com"
  gateways:
    - istio-system/default-gateway # Assumed existing Gateway
  http:
    - route:
        - destination:
            host: prowlarr
            port:
              number: 9696
